tests/test136.rael.exp
Error [tests/test136.rael:1:58]: Invalid slicing
| log { "a", "programming", "language", "called", "rael" } at (1 to 100)
|                                                          ^
