tests/test136.rael
log { "a", "programming", "language", "called", "rael" } at (1 to 100) 